opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_driver"
bug-reports: "https://github.com/janestreet/ppx_driver/issues"
dev-repo: "https://github.com/janestreet/ppx_driver.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_driver" "--root" "." "-j" jobs "@install"]
]
depends: [
  "jbuilder"                {build}
  "ppx_core"
  "ppx_optcomp"
  "ocaml-migrate-parsetree"
  "ocamlbuild"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Feature-full driver for OCaml AST transformers

Part of the Jane Street's PPX rewriters collection.
"
